
-Obfuscated any crypto addresses added in the 'address-balance-tracker' plugin, from ever showing in any debug / error logging (only shows the first / last 2 characters for privacy)

-Consolidated error / debug logs into one log file, for clarified debugging output (whe debugging is enabled)

-Added range sliders in place of all drop-down select menus (for numerical values) in the admin interface

-Miscellaneous user experience improvements

-Code optimization / cleanup

-Updated documentation

IMPORTANT *UPGRADE* NOTICE:

v6.00.29 and higher restructures the 'price-target-alert' plugin. USE THE LATEST/UPGRADED PLUG_CONF.PHP,
AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.

v6.00.29 and higher renames / restructures MANY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING CUSTOM NEWS FEEDS TO THE NEW FORMAT.

-v6.00.29 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.26 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.30:

-BUG FIX: Miscellaneous fixes

-Miscellaneous user experience improvements

-Code optimization / cleanup

-Updated documentation

IMPORTANT *UPGRADE* NOTICE:

v6.00.29 and higher restructures the 'price-target-alert' plugin. USE THE LATEST/UPGRADED PLUG_CONF.PHP,
AND MIGRATE YOUR EXISTING CUSTOM PRICE TARGET ALERTS TO THE NEW FORMAT.

v6.00.29 and higher renames / restructures MANY settings in the config. USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING CUSTOM NEWS FEEDS TO THE NEW FORMAT.

-v6.00.29 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.26 OR LOWER.

-------------------------------------------------------------------








