@@ -265,7 +265,8 @@ $ct['dev']['script_injection_checks'] = array(
 elseif ( $dev_only_configs_mode == 'config-init-upgrade-check' ) {
 
 
-     // v6.00.30 should RESET the 'assets' and 'tracked_markets' cached config values
+     // v6.00.30:
+     // RESET the 'assets' and 'tracked_markets' cached config values
      // (as we have RECENTLY added jupiter aggregator markets, that assist tracking Solana (SPL) subtokens crypto address
      // balance's primary currency value (USD / EUR / etc), in the 'address-balance-tracker' plugin [when privacy mode is on])
      // AND IF WE RESET 'assets', WE NEED TO RESET 'tracked_markets' TOO
@@ -281,14 +282,22 @@ elseif ( $dev_only_configs_mode == 'after-load-config' ) {
 
 
 // Obfuscate these matches in ALL error / debugging logs
-// (so API keys etc never show in logs)
-$ct['dev']['url_obfuscating'] = array(
+// (ONLY ADD SENSITIVE VALUES HERE THAT COULD SHOW IN URL GET REQUEST DATA / ERROR NOTICES / ETC)
+$ct['dev']['data_obfuscating'] = array(
                                       // 'hide_this',
-                                      $ct['conf']['ext_apis']['etherscan_api_key'],
+                                      $ct['conf']['comms']['from_email'],
+                                      $ct['conf']['comms']['to_email'],
+                                      $ct['conf']['ext_apis']['telegram_your_username'],
+                                      $ct['conf']['ext_apis']['telegram_bot_username'],
                                       $ct['conf']['ext_apis']['telegram_bot_token'],
-                                      $ct['conf']['ext_apis']['alphavantage_api_key'],
+                                      $ct['conf']['ext_apis']['twilio_number'],
                                       $ct['conf']['ext_apis']['twilio_sid'],
+                                      $ct['conf']['ext_apis']['twilio_token'],
+                                      $ct['conf']['ext_apis']['textbelt_api_key'],
+                                      $ct['conf']['ext_apis']['textlocal_api_key'],
                                       $ct['conf']['ext_apis']['google_fonts_api_key'],
+                                      $ct['conf']['ext_apis']['etherscan_api_key'],
+                                      $ct['conf']['ext_apis']['alphavantage_api_key'],
                                      );
                                      
                                      
